# alyx-c-project

./: CMakeLists.txt  LICENSE  README.md  alyx_header_import.cmake  alyx_headers_import.cmake  pico_sdk_import.cmake  setup_sdk
.github/workflows/: build.yml  release.yml
demo/: CMakeLists.txt  blink.c
